# HelloCrossPlatform

./: .gitignore  .gitmodules  MANUAL.txt  NOTES.txt  README.md  argparse.sh  import.sh  make_all.sh  make_game.sh  make_libs.bat  make_libs.sh
cmake/: CMakeLists.txt
cmake/lib/: CMakeLists.txt
cmake/lib/glew/: CMakeLists.txt
cmake/lib/glfw/: CMakeLists.txt
cmake/lib/glm/: CMakeLists.txt
cmake/libs/: CMakeLists.txt
cmake/libs/glew/: CMakeLists.txt
cmake/libs/glfw/: CMakeLists.txt
cmake/libs/glm/: CMakeLists.txt
lib/glew/: glew.pc
libs/: CMakeLists.txt
libs/cmake/: CMakeLists.txt
projects/android/monti/app/: build.gradle
projects/android/monti/app/src/androidTest/java/com/higohertz/monti/: ExampleInstrumentedTest.kt
projects/android/monti/app/src/main/: AndroidManifest.xml
projects/android/monti/app/src/main/cpp/: native-lib.cpp
projects/android/monti/app/src/main/java/com/higohertz/monti/: MainActivity.kt
projects/android/monti/app/src/main/res/layout/: activity_main.xml
projects/android/monti/app/src/main/res/values/: strings.xml
projects/android/monti/app/src/test/java/com/higohertz/monti/: ExampleUnitTest.kt
projects/android/monti/gradle/wrapper/: gradle-wrapper.properties
src/: CMakeLists.txt
src/game/: Callbacks.cpp  Callbacks.h  GameLoop.cpp  GameLoop.h
src/game/core/: Timing.cpp  Timing.h
src/native/windows/: main.cpp
